site.css
.alignContainer {
  text-align: center;
}

.carousel {
  display: inline-block;
  width: 70vh;
  height: 70vh;
}

#mapid {
  display: inline-block;
  height: 60vh;
  width: 70%;
}

.white-text {
  color: whitesmoke;
}

.text-box {
  display: inline-block;
  width: 70%;
}

.section {
  padding-top: 2.5vh;
}

.end-section {
  padding-top: 2.5vh;
  padding-bottom: 2.5vh;
}

.navbar-custom {
  background-color: darkolivegreen;
}

.navbar-custom .navbar-brand,
.navbar-custom .navbar-text {
  color: wheat;
}

.navbar-custom .navbar-nav .nav-link {
  color: wheat;
}

.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:hover .nav-link {
  color: white;
}

.light-on-dark {
  background-color: darkslategray;
  color: wheat;
  min-height: 100vh;
}

.accent-color {
  background-color: green
}

.item-width {
  display:inline-block;
  width: 90%;
}

.item-font {
  font-size: 1.5rem;
}
.img-width {
  display:inline-block;
  width: 25%
}

.textSpacing {
  line-height: 1.8;
}

